refactor: restructure backend domain modules and update frontend services for core clinical and identity workflows.