@@ -4,14 +4,14 @@ import ca.uhn.fhir.rest.annotation.*;
 import ca.uhn.fhir.rest.param.ReferenceParam;
 import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import com.sentinel.allergies.entity.Allergy;
-import com.sentinel.allergies.repository.AllergyRepository;
+import com.sentinel.clinical.entity.Allergy;
+import com.sentinel.clinical.repository.AllergyRepository;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r4.model.IdType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Component
 public class AllergyIntoleranceResourceProvider implements IResourceProvider {
@@ -29,10 +29,13 @@ public class AllergyIntoleranceResourceProvider implements IResourceProvider {
 
     @Read
     public org.hl7.fhir.r4.model.AllergyIntolerance getAllergyById(@IdParam IdType id) {
-        Long allergyId = id.getIdPartAsLong();
+        UUID allergyId = UUID.fromString(id.getIdPart());
         Allergy allergy = allergyRepository.findById(allergyId)
                 .orElseThrow(() -> new ResourceNotFoundException("AllergyIntolerance/" + allergyId + " not found"));
-        return allergy.toFhirResource();
+        
+        org.hl7.fhir.r4.model.AllergyIntolerance fhir = new org.hl7.fhir.r4.model.AllergyIntolerance();
+        fhir.setId(allergy.getId().toString());
+        return fhir;
     }
 
     @Search
@@ -41,14 +44,16 @@ public class AllergyIntoleranceResourceProvider implements IResourceProvider {
 
         List<Allergy> list;
         if (patientParam != null) {
-            Long patientId = Long.parseLong(patientParam.getIdPart());
+            UUID patientId = UUID.fromString(patientParam.getIdPart());
             list = allergyRepository.findByPatientId(patientId);
         } else {
             list = allergyRepository.findAll();
         }
 
-        return list.stream()
-                .map(Allergy::toFhirResource)
-                .collect(Collectors.toList());
+        return list.stream().map(a -> {
+            org.hl7.fhir.r4.model.AllergyIntolerance fhir = new org.hl7.fhir.r4.model.AllergyIntolerance();
+            fhir.setId(a.getId().toString());
+            return fhir;
+        }).toList();
     }
 }
