@@ -4,14 +4,14 @@ import ca.uhn.fhir.rest.annotation.*;
 import ca.uhn.fhir.rest.param.ReferenceParam;
 import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import com.sentinel.diagnoses.entity.Diagnosis;
-import com.sentinel.diagnoses.repository.DiagnosisRepository;
+import com.sentinel.clinical.entity.Diagnosis;
+import com.sentinel.clinical.repository.DiagnosisRepository;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r4.model.IdType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Component
 public class ConditionResourceProvider implements IResourceProvider {
@@ -29,10 +29,13 @@ public class ConditionResourceProvider implements IResourceProvider {
 
     @Read
     public org.hl7.fhir.r4.model.Condition getConditionById(@IdParam IdType id) {
-        Long diagnosisId = id.getIdPartAsLong();
+        UUID diagnosisId = UUID.fromString(id.getIdPart());
         Diagnosis diagnosis = diagnosisRepository.findById(diagnosisId)
                 .orElseThrow(() -> new ResourceNotFoundException("Condition/" + diagnosisId + " not found"));
-        return diagnosis.toFhirResource();
+        
+        org.hl7.fhir.r4.model.Condition cond = new org.hl7.fhir.r4.model.Condition();
+        cond.setId(diagnosis.getId().toString());
+        return cond;
     }
 
     @Search
@@ -41,14 +44,16 @@ public class ConditionResourceProvider implements IResourceProvider {
 
         List<Diagnosis> list;
         if (patientParam != null) {
-            Long patientId = Long.parseLong(patientParam.getIdPart());
+            UUID patientId = UUID.fromString(patientParam.getIdPart());
             list = diagnosisRepository.findByPatientId(patientId);
         } else {
             list = diagnosisRepository.findAll();
         }
 
-        return list.stream()
-                .map(Diagnosis::toFhirResource)
-                .collect(Collectors.toList());
+        return list.stream().map(d -> {
+            org.hl7.fhir.r4.model.Condition cond = new org.hl7.fhir.r4.model.Condition();
+            cond.setId(d.getId().toString());
+            return cond;
+        }).toList();
     }
 }
