@@ -4,14 +4,14 @@ import ca.uhn.fhir.rest.annotation.*;
 import ca.uhn.fhir.rest.param.ReferenceParam;
 import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import com.sentinel.encounters.entity.Encounter;
-import com.sentinel.encounters.repository.EncounterRepository;
+import com.sentinel.clinical.entity.Encounter;
+import com.sentinel.clinical.repository.EncounterRepository;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r4.model.IdType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Component
 public class EncounterResourceProvider implements IResourceProvider {
@@ -29,10 +29,18 @@ public class EncounterResourceProvider implements IResourceProvider {
 
     @Read
     public org.hl7.fhir.r4.model.Encounter getEncounterById(@IdParam IdType id) {
-        Long encId = id.getIdPartAsLong();
+        UUID encId = UUID.fromString(id.getIdPart());
         Encounter encounter = encounterRepository.findById(encId)
                 .orElseThrow(() -> new ResourceNotFoundException("Encounter/" + encId + " not found"));
-        return encounter.toFhirResource();
+        
+        org.hl7.fhir.r4.model.Encounter fhir = new org.hl7.fhir.r4.model.Encounter();
+        fhir.setId(encounter.getId().toString());
+        if ("INPATIENT".equalsIgnoreCase(encounter.getEncounterType())) {
+            fhir.setClass_(new org.hl7.fhir.r4.model.Coding("http://terminology.hl7.org/CodeSystem/v3-ActCode", "IMP", "inpatient encounter"));
+        } else {
+            fhir.setClass_(new org.hl7.fhir.r4.model.Coding("http://terminology.hl7.org/CodeSystem/v3-ActCode", "AMB", "ambulatory"));
+        }
+        return fhir;
     }
 
     @Search
@@ -41,14 +49,16 @@ public class EncounterResourceProvider implements IResourceProvider {
 
         List<Encounter> list;
         if (patientParam != null) {
-            Long patientId = Long.parseLong(patientParam.getIdPart());
-            list = encounterRepository.findByPatientId(patientId);
+            UUID patientId = UUID.fromString(patientParam.getIdPart());
+            list = encounterRepository.findByPatientIdOrderByStartedAtDesc(patientId);
         } else {
             list = encounterRepository.findAll();
         }
 
-        return list.stream()
-                .map(Encounter::toFhirResource)
-                .collect(Collectors.toList());
+        return list.stream().map(e -> {
+            org.hl7.fhir.r4.model.Encounter fhir = new org.hl7.fhir.r4.model.Encounter();
+            fhir.setId(e.getId().toString());
+            return fhir;
+        }).toList();
     }
 }
