@@ -5,22 +5,26 @@ import ca.uhn.fhir.rest.api.MethodOutcome;
 import ca.uhn.fhir.rest.param.StringParam;
 import ca.uhn.fhir.rest.server.IResourceProvider;
 import ca.uhn.fhir.rest.server.exceptions.ResourceNotFoundException;
-import com.sentinel.patients.entity.Patient;
-import com.sentinel.patients.repository.PatientRepository;
+import com.sentinel.identity.entity.Person;
+import com.sentinel.patient.entity.Patient;
+import com.sentinel.patient.repository.PatientRepository;
 import org.hl7.fhir.instance.model.api.IBaseResource;
 import org.hl7.fhir.r4.model.IdType;
 import org.springframework.stereotype.Component;
 
 import java.util.List;
-import java.util.stream.Collectors;
+import java.util.UUID;
 
 @Component
 public class PatientResourceProvider implements IResourceProvider {
 
     private final PatientRepository patientRepository;
+    private final com.sentinel.identity.repository.PersonRepository personRepository;
 
-    public PatientResourceProvider(PatientRepository patientRepository) {
+    public PatientResourceProvider(PatientRepository patientRepository,
+                                   com.sentinel.identity.repository.PersonRepository personRepository) {
         this.patientRepository = patientRepository;
+        this.personRepository = personRepository;
     }
 
     @Override
@@ -30,10 +34,14 @@ public class PatientResourceProvider implements IResourceProvider {
 
     @Read
     public org.hl7.fhir.r4.model.Patient getPatientById(@IdParam IdType id) {
-        Long patientId = id.getIdPartAsLong();
+        UUID patientId = UUID.fromString(id.getIdPart());
         Patient patient = patientRepository.findById(patientId)
                 .orElseThrow(() -> new ResourceNotFoundException("Patient/" + patientId + " not found"));
-        return patient.toFhirResource();
+        
+        org.hl7.fhir.r4.model.Patient fhir = new org.hl7.fhir.r4.model.Patient();
+        fhir.setId(patient.getId().toString());
+        fhir.addName().addGiven(patient.getFullName());
+        return fhir;
     }
 
     @Search
@@ -42,38 +50,38 @@ public class PatientResourceProvider implements IResourceProvider {
             @OptionalParam(name = org.hl7.fhir.r4.model.Patient.SP_GENDER) StringParam gender,
             @OptionalParam(name = org.hl7.fhir.r4.model.Patient.SP_IDENTIFIER) StringParam identifier) {
 
-        List<Patient> list = patientRepository.findAll();
-        return list.stream()
-                .filter(p -> name == null || (p.getFullName() != null && p.getFullName().toLowerCase().contains(name.getValue().toLowerCase())))
-                .filter(p -> gender == null || (p.getGender() != null && p.getGender().equalsIgnoreCase(gender.getValue())))
-                .filter(p -> identifier == null || (p.getPatientCode() != null && p.getPatientCode().equalsIgnoreCase(identifier.getValue())) || (p.getAbhaId() != null && p.getAbhaId().equalsIgnoreCase(identifier.getValue())))
-                .map(Patient::toFhirResource)
-                .collect(Collectors.toList());
+        String nameVal = name != null ? name.getValue() : null;
+        String identifierVal = identifier != null ? identifier.getValue() : null;
+
+        List<Patient> list = patientRepository.searchPatients(nameVal, identifierVal, null, null, null);
+        return list.stream().map(p -> {
+            org.hl7.fhir.r4.model.Patient fhir = new org.hl7.fhir.r4.model.Patient();
+            fhir.setId(p.getId().toString());
+            fhir.addName().addGiven(p.getFullName());
+            return fhir;
+        }).toList();
     }
 
     @Create
     public MethodOutcome createPatient(@ResourceParam org.hl7.fhir.r4.model.Patient fhirPatient) {
-        Patient entity = new Patient();
+        Person person = new Person();
         if (fhirPatient.hasName()) {
-            entity.setFullName(fhirPatient.getNameFirstRep().getNameAsSingleString());
+            person.setFirstName(fhirPatient.getNameFirstRep().getNameAsSingleString());
         } else {
-            entity.setFullName("Unknown Patient");
+            person.setFirstName("Unknown Patient");
         }
+        Person savedPerson = personRepository.save(person);
 
-        if (fhirPatient.hasGender()) {
-            entity.setGender(fhirPatient.getGender().toCode().toUpperCase());
-        }
-
-        if (fhirPatient.hasBirthDate()) {
-            entity.setDateOfBirth(fhirPatient.getBirthDate().toInstant().atZone(java.time.ZoneId.systemDefault()).toLocalDate());
-        }
-
-        entity.setPatientCode("MRN-" + System.currentTimeMillis());
+        Patient entity = new Patient();
+        entity.setPerson(savedPerson);
+        entity.setStatus("ACTIVE");
         Patient saved = patientRepository.save(entity);
 
         MethodOutcome outcome = new MethodOutcome();
-        outcome.setId(new IdType("Patient", saved.getId()));
-        outcome.setResource(saved.toFhirResource());
+        outcome.setId(new IdType("Patient", saved.getId().toString()));
+        org.hl7.fhir.r4.model.Patient res = new org.hl7.fhir.r4.model.Patient();
+        res.setId(saved.getId().toString());
+        outcome.setResource(res);
         return outcome;
     }
 }
